[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.0",
    "urllib3>=2.5.0",
    "xlsxwriter>=3.2.5",
]
